--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "pycodeq.autoFixOnSave": true,
-  "pycodeq.autopep8ExecutablePath": "autopep8",
+  "editor.defaultFormatter": "ms-python.autopep8",
+  "editor.formatOnSave": true,
   "python-envs.defaultEnvManager": "ms-python.python:pipenv",
   "python-envs.pythonProjects": []
 }
